--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,18 @@
         }
     ],
     "require": {
+        "larakit/lk-twig": "*",
+        "larakit/sf-bootstrap":"*",
+        "larakit/sf-angular-ui-bootstrap":"*",
+        "larakit/sf-bootstrap-daterangepicker":"*",
+        "larakit/sf-bootstrap-datetimepicker":"*",
+        "larakit/sf-bootstrap-select2":"*",
+        "larakit/sf-bootstrap-switch":"*",
+        "pear/html_quickform2": "*",
+        "larakit/lk-html": "*",
+        "larakit/lk-event": "*",
+        "larakit/lk-validatebuilder": "*",
+
         "way/generators": "*",
         "barryvdh/laravel-ide-helper": "*",
         "barryvdh/laravel-debugbar": "*",
